Fix layout bugs

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -146,7 +146,7 @@
         gap: 5vw;
         margin: 5vw 10vw;
         align-items: center;
-        margin-bottom: 150px;
+        margin-bottom: 100px;
     }
     .contact-title h1 {
         font-size: clamp(2rem, 3vw, 2.5rem);
